src/App.css
html{
  font-size: 18px;
  background-color: var(--lightColor);
  overflow-x: hidden;
  --mainColor: #364156; /*#296852*/
  --secondColor: #7D4E57; /* */
  --lightColor: #F1F0EC; /*#F7F3F0 */

}
.App {
  text-align: center;
  background-color: var(--lightColor);
  display:flex;
  justify-content: center;
  flex-direction: column;
}

.App-header {
  display:flex;

  flex-direction: row;
  background-color: var(--lightColor);
  height: 10vh;
}

.App-footer {
  background-color: var(--lightColor);
  height: 5vh;
  align-items: center;
}
.left {
  margin-top: 40px;
  height : 10vh;
  margin-left :60px;
  margin-bottom: 40px;
  position: absolute;
  display:flex;
  align-items: center;
  left: 0;
}

.right {
  margin-top: 40px;
  margin-bottom: 40px;
    height : 10vh;

  margin-right:60px;
  direction: rtl;
  display:flex;
  align-items: center;
  position: absolute;
  white-space: nowrap;
  right: 0;
}

.header-wrap {
  position:fixed;
}

.header-link, .header-link:visited {
  text-decoration: none;
  font-family: 'Overpass', sans-serif;
  height: 4px;
  font-size: .8rem;
  color: var(--mainColor);
}

.header-link:after, .header-link:visited:after {
  content: '';
  height: 4px;
  position: absolute;
  bottom: 0;
  left: 0;
  width: 0%;
  background-size: cover;
  background-repeat: no-repeat;
  background-image: url("/img/underline.svg");
  transition: 0.3s;
}
.header-link:hover:after, .header-link:visited:hover:after {
  width: 100%;
  height:4px;
}

.header-link.block, .header-link:visited.block {
  display: block;
}

.header-link[page="fixed"], .header-link[page="fixed"]:visited {
  text-decoration: none;
  font-family: 'Overpass', sans-serif;
  height: 4px;

  font-size: .8rem;
  color:var(--mainColor);
}

.header-link[page="fixed"]:after, .header-link[page="fixed"]:visited:after {
  content: '';
  height: 4px;
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  background-size: cover;
  background-repeat: no-repeat;
  background-image: url("/img/underline.svg");
}

.link-wrap {
  position: relative;
  padding-bottom: 6px ;
}

.link, .link:visited {
  text-decoration: none;
  font-family: 'Overpass', sans-serif;
  height: 4px;
  font-size: .8rem;
  color:var(--mainColor);
}

.link:after, .link:visited:after {
  content: '';
  height: 4px;
  position: absolute;
  bottom: 0;
  left: 0;
  width: 0%;
  background-size: cover;
  background-repeat: no-repeat;
  background-image: url("/img/underline.svg");
  transition: 0.3s;
}
.link:hover:after, .link:visited:hover:after {
  width: 100%;
  height:4px;
}


.link.block, .link:visited.block {
  display: block;
}

.tag {
  text-decoration: none;
  font-family: 'Overpass', sans-serif;
  color: var(--mainColor);
  font-size: .8rem;
}

.footer-link {
  display:flex;
  flex-direction: row;
  justify-content: space-between;
  width:18vh;
}
.page {
  display:flex;
  flex-direction: column;
  background-color: var(--lightColor);
}

.name-wrap {
  display:flex;
  align-items: center;
  justify-content: center;
  height: 70vh;
}

.name {
  font-family: 'Cormorant Garamond', serif;
  position:fixed;
  z-index: 0;
  color:var(--mainColor);
  font-size: 4.5rem;
}

.flipped {
  transform: rotate(180deg);
}

.mountains {
  margin-bottom: -30px;
  margin-left: -400px;
  width: 300vw;
  display:block;
  z-index: 1;
}

.content {
  z-index:1 ;
  background-color: var(--mainColor);
  display: flex;
  justify-content: center;
  align-items: center;
}

.work {
  display: flex;
  flex-direction: column  ;
  text-align: left;
  width: 65vw;
  margin-left: 60px;
  margin-top: 90px;
  margin-bottom: 150px;
}

.work-header{
  color: var(--lightColor);
  font-family: 'Overpass', sans-serif;
  font-size: 1.25rem;
}

.work-title{
  color: var(--lightColor);
  transition: all .4s;
}


.work-title a{
  color: var(--lightColor);
  transition: all .4s;
}

@keyframes slide {
  from { transform : translateY(0em); scale: 1; }
  to   { transform : translateY(-45em); scale: .1; } 
}
.work-wrap {
  display:flex;
  flex-direction: row;
  align-items: left;
  justify-content: space-between;
}
.image-wrap{
  position:relative;
}
.work-image {
  position: absolute;
  max-width: 30vw;
  max-height: 70vh;
}

.work-image[state="0"] {
  transform: rotate(-15deg);
  transform-origin: bottom right;
  transition: transform .25s linear;

}
.work-image[state="1"] {
  transform: rotate(-10deg);
  transform-origin: bottom right;
  transition: transform .25s linear;



}
.work-image[state="2"] {
  transform: rotate(-5deg);
  transform-origin: bottom right;
  transition: transform .25s linear;

  
}
.work-image[state="3"] {
  transform: rotate(0);

}

.work-titles {
  display: flex;
  flex-direction: column;
  text-align: left;
  justify-content: space-between;
  height: 80vh;
  color: var(--lightColor);
}
.work-title:hover{
  color: #B89EA3;
  transform: translateX(-10px);
}

.work-title:hover a{
  color: #B89EA3;
}

.work-category{
  margin-block-start: 0px;
  font-size: .75rem;
  font-family: 'Overpass', sans-serif;
}

.work-link {
  color: var(--lightColor);
  font-family: 'Cormorant Garamond', serif;
  font-size: 2.5rem;
  text-decoration: none;
}

@keyframes slide {
  from { transform : translateY(0em) }
  to   { transform : translateY(-45em) } 
}

.bubble-wrap {
  animation: moveBubble 60s both;
  position:fixed;
  z-index: 0;

}

@keyframes pulse {
  0% {
    transform: scale(1);
  }

  100% {
    transform: scale(.1);
  }
}

@keyframes moveBubble {
  0% {
    opacity: 0;
    transform: translate(0, 100px);
  }

  10% {
    opacity: 1;
  }

  100% {
    transform: translate(-75vh, -100vh);
  }
}

.bubble {
  animation: pulse 50s infinite;
  z-index: 0;
  background-color:transparent;
  border-radius: 50%; 
  border: 1.5px solid var(--mainColor);
  width :20px;
  height: 20px;
  margin-top: 70vh;
  left: 50vw;
  position: relative;
}

